App2/src/objects/Seat_Reservation_on_Route__c.object
<CustomObject>
    <fields>
        <fullName>Passenger__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Passenger</label>
        <referenceTo>Passenger__c</referenceTo>
        <relationshipLabel>Seats Reservation on Route</relationshipLabel>
        <relationshipName>PassengerName</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Route__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Route</label>
        <referenceTo>Route__c</referenceTo>
        <relationshipLabel>Seats Reservation on Route</relationshipLabel>
        <relationshipName>RouteOfPassenger</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Seat__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Seat</label>
        <referenceTo>Seat__c</referenceTo>
        <relationshipLabel>Seats Reservation on Route</relationshipLabel>
        <relationshipName>SeatNumber</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ticket__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Ticket</label>
        <referenceTo>Ticket__c</referenceTo>
        <relationshipLabel>Seats Reservation on Route</relationshipLabel>
        <relationshipName>TicketName</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Seat Reservation on Route</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Seats Reservation on Route</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>